--- a/app/views/levels/01_other_buttons.html.erb
+++ b/app/views/levels/01_other_buttons.html.erb
@@ -5,52 +5,65 @@
 <!-- Write CSS in public/css/my_styles.css to make the following <a> tags look like buttons of various colors -->
 
 <p>
-  <a>Primary</a>
+  <a class="base-button fancy-button">Primary</a>
 </p>
 
 <p>
-  <a>Secondary</a>
+  <a class="base-button secondary-button">Secondary</a>
 </p>
 
 <p>
-  <a>Success</a>
+  <a class="base-button success-button">Success</a>
 </p>
 
 <p>
-  <a>Danger</a>
+  <a class="base-button danger-button">Danger</a>
 </p>
 
 <p>
-  <a>Warning</a>
+  <a class="base-button warning-button">Warning</a>
 </p>
 
 <p>
-  <a>Info</a>
+  <a class="base-button info-button">Info</a>
 </p>
 
 
 <p>Less intrusive variants:</p>
 
 <p>
-  <a>Primary (unobtrusive)</a>
+  <a class="unobtrusive-button fancy-button-unobtrusive">Primary (unobtrusive)</a>
 </p>
 
 <p>
-  <a>Secondary (unobtrusive)</a>
+  <a class="unobtrusive-button secondary-button-unobtrusive">Secondary (unobtrusive)</a>
 </p>
 
 <p>
-  <a>Success (unobtrusive)</a>
+  <a class="unobtrusive-button success-button-unobtrusive">Success (unobtrusive)</a>
 </p>
 
 <p>
-  <a>Danger (unobtrusive)</a>
+  <a class="unobtrusive-button danger-button-unobtrusive">Danger (unobtrusive)</a>
 </p>
 
 <p>
-  <a>Warning (unobtrusive)</a>
+  <a class="unobtrusive-button warning-button-unobtrusive">Warning (unobtrusive)</a>
 </p>
 
 <p>
-  <a>Info (unobtrusive)</a>
+  <a class="unobtrusive-button info-button-unobtrusive">Info (unobtrusive)</a>
 </p>
+
+<a class="btn btn-primary">Primary</a>
+<a class="btn btn-secondary">Secondary</a>
+<a class="btn btn-success">Success</a>
+<a class="btn btn-danger">Danger</a>
+<a class="btn btn-warning">Warning</a>
+<a class="btn btn-info">Info</a>
+<a class="btn btn-outline-primary">Primary (unobtrusive)</a>
+<a class="btn btn-outline-secondary">Secondary (unobtrusive)</a>
+<a class="btn btn-outline-success">Success (unobtrusive)</a>
+<a class="btn btn-outline-danger">Danger (unobtrusive)</a>
+<a class="btn btn-outline-warning">Warning (unobtrusive)</a>
+<a class="btn btn-outline-info">Info (unobtrusive)</a>
