--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -1,23 +1,157 @@
+.base-button {
+  color: white;
+  background-color: #0000ab;
+  padding: 6px;
+  border-radius: 6px;
+  box-shadow: 0px 0px 2px -1px rgba(0, 0, 0, 0.64) inset;
+  -webkit-box-shadow: 0px 0px -1px 2px rgba(0, 0, 0, 0.64) inset;
+  -moz-box-shadow: 0px 0px 2px -1px rgba(0, 0, 0, 0.64) inset;
+}
 
-  .fancy-button {
-    background-color: blue;
-    color: white;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 5px;
+.fancy-button {
+  background-color: #0000ab;
+}
 
-    box-shadow: 2px -1px 66px 39px rgba(0, 0, 0, 0.33) inset;
-    -webkit-box-shadow: 2px -1px 66px 39px rgba(0, 0, 0, 0.33) inset;
-    -moz-box-shadow: 2px -1px 66px 39px rgba(0, 0, 0, 0.33) inset;
-  }
+.fancy-button:hover {
+  background-color: darkblue;
+}
 
-  .fancy-button:hover {
-    background-color: darkblue;
-  }
+.fancy-button:active {
+  background-color: red;
+}
 
-  .fancy-button:active {
-    background-color: blue;
-  }
+.scary-button {
+  background-color: red;
+}
 
+.secondary-button {
+  background-color: grey;
+}
+
+.secondary-button:hover {
+  background-color: rgb(100,100,100);
+}
+
+.secondary-button:active {
+  background-color: grey;
+}
+
+.success-button {
+  background-color: rgb(15, 99, 15);
+}
+
+.success-button:hover {
+  background-color: rgb(31, 78, 31);
+}
+
+.success-button:active {
+  background-color: rgb(15, 99, 15);
+}
+
+.danger-button {
+  background-color: red;
+}
+
+.danger-button:hover {
+  background-color: darkred;
+}
+
+.danger-button:active {
+  background-color: red;
+}
+
+.warning-button {
+  background-color: goldenrod;
+}
+
+.warning-button:hover {
+  background-color: rgb(230, 238, 71);
+}
+
+.warning-button:active {
+  background-color: goldenrod;
+}
+
+.info-button {
+  background-color: rgb(15, 99, 15);
+}
+
+.info-button:hover {
+  background-color: rgb(42, 217, 217);
+}
+
+.info-button:active {
+  background-color: rgb(15, 99, 15);
+}
+
+
+.unobtrusive-button {
+  background-color: white;
+  padding: 6px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 6px;
+  box-shadow: 0px 0px 2px -1px rgba(0, 0, 0, 0.64) inset;
+  -webkit-box-shadow: 0px 0px -1px 2px rgba(0, 0, 0, 0.64) inset;
+  -moz-box-shadow: 0px 0px 2px -1px rgba(0, 0, 0, 0.64) inset;
+}
+
+.fancy-button-unobtrusive {
+  color: blue;
+  border-color: blue
+}
+
+.fancy-button-unobtrusive:hover {
+  color: white;
+  background-color: blue;
+}
+
+.secondary-button-unobtrusive {
+  color: grey;
+  border-color: grey
+}
+
+.secondary-button-unobtrusive:hover {
+  color: white;
+  background-color: grey;
+}
+
+.success-button-unobtrusive {
+  color: rgb(15, 99, 15);
+  border-color: rgb(15, 99, 15)
+}
+
+.success-button-unobtrusive:hover {
+  color: white;
+  background-color: rgb(15, 99, 15);
+}
+
+.danger-button-unobtrusive {
+  color: red;
+  border-color: red
+}
+
+.danger-button-unobtrusive:hover {
+  color: white;
+  background-color: red;
+}
+
+.warning-button-unobtrusive {
+  color: goldenrod;
+  border-color: goldenrod
+}
+
+.warning-button-unobtrusive:hover {
+  color: white;
+  background-color: goldenrod;
+}
+
+.info-button-unobtrusive {
+  color: goldenrod;
+  border-color: goldenrod
+}
+
+.info-button-unobtrusive:hover {
+  color: white;
+  background-color: goldenrod;
+}
