--- a/app/views/levels/01_other_buttons.html.erb
+++ b/app/views/levels/01_other_buttons.html.erb
@@ -1,69 +1,53 @@
-<p>
-  <a href="https://bootstrap-levels.matchthetarget.com/levels/01_other_buttons" target="_blank">Target</a>
-</p>
-
-<!-- Write CSS in public/css/my_styles.css to make the following <a> tags look like buttons of various colors -->
-
-<p>
-  <a class="base-button fancy-button">Primary</a>
+   <p>
+  <span class="base-button base-button-blue">Primary</span>
 </p>
 
 <p>
-  <a class="base-button secondary-button">Secondary</a>
+  <span class="base-button base-button-gray">Secondary</span>
 </p>
 
 <p>
-  <a class="base-button success-button">Success</a>
+  <span class="base-button base-button-green">Success</span>
 </p>
 
 <p>
-  <a class="base-button danger-button">Danger</a>
+  <span class="base-button base-button-red">Danger</span>
 </p>
 
 <p>
-  <a class="base-button warning-button">Warning</a>
+  <span class="base-button base-button-orange">Warning</span>
 </p>
 
 <p>
-  <a class="base-button info-button">Info</a>
+  <span class="base-button base-button-cyan">Info</span>
 </p>
 
 
 <p>Less intrusive variants:</p>
 
 <p>
-  <a class="unobtrusive-button fancy-button-unobtrusive">Primary (unobtrusive)</a>
+  <span class="base-button-outline base-button-outline-blue">Primary (unobtrusive)</span>
 </p>
 
 <p>
-  <a class="unobtrusive-button secondary-button-unobtrusive">Secondary (unobtrusive)</a>
+  <span class="base-button-outline base-button-outline-gray">Secondary (unobtrusive)</span>
 </p>
 
 <p>
-  <a class="unobtrusive-button success-button-unobtrusive">Success (unobtrusive)</a>
+  <span class="base-button-outline base-button-outline-green">Success (unobtrusive)</span>
 </p>
 
 <p>
-  <a class="unobtrusive-button danger-button-unobtrusive">Danger (unobtrusive)</a>
+  <span class="base-button-outline base-button-outline-red">Danger (unobtrusive)</span>
 </p>
 
 <p>
-  <a class="unobtrusive-button warning-button-unobtrusive">Warning (unobtrusive)</a>
+  <span class="base-button-outline base-button-outline-orange">Warning (unobtrusive)</span>
 </p>
 
 <p>
-  <a class="unobtrusive-button info-button-unobtrusive">Info (unobtrusive)</a>
+  <span class="base-button-outline base-button-outline-cyan">Info (unobtrusive)</span>
 </p>
 
-<a class="btn btn-primary">Primary</a>
-<a class="btn btn-secondary">Secondary</a>
-<a class="btn btn-success">Success</a>
-<a class="btn btn-danger">Danger</a>
-<a class="btn btn-warning">Warning</a>
-<a class="btn btn-info">Info</a>
-<a class="btn btn-outline-primary">Primary (unobtrusive)</a>
-<a class="btn btn-outline-secondary">Secondary (unobtrusive)</a>
-<a class="btn btn-outline-success">Success (unobtrusive)</a>
-<a class="btn btn-outline-danger">Danger (unobtrusive)</a>
-<a class="btn btn-outline-warning">Warning (unobtrusive)</a>
-<a class="btn btn-outline-info">Info (unobtrusive)</a>
+    </div>
+  </body>
