--- a/app/views/levels/07_dynamic_list_group.html.erb
+++ b/app/views/levels/07_dynamic_list_group.html.erb
@@ -1,6 +1,15 @@
-<p>
-  <a href="https://bootstrap-levels.matchthetarget.com/levels/07_dynamic_list_group" target="_blank">Target</a>
-</p>
-
-<%# The below code creates an array of 10 random names %>
-<%= names = Array.new(10) { Faker::Name.unique.name  } %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
+      <div class="list-group">
+        <% names = Array.new(10) { Faker::Name.unique.name } %>
+        <% names.each do |name| %>
+          <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <%= name %>
+            <span class="badge bg-primary rounded-pill"><%= rand(0..10) %></span>
+          </a>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
