--- a/app/views/levels/01_other_buttons.html.erb
+++ b/app/views/levels/01_other_buttons.html.erb
@@ -1,53 +1,50 @@
-   <p>
-  <span class="base-button base-button-blue">Primary</span>
+<p>
+  <a class="base-button fancy-button">Primary</a>
 </p>
 
 <p>
-  <span class="base-button base-button-gray">Secondary</span>
+  <a class="base-button secondary-button">Secondary</a>
 </p>
 
 <p>
-  <span class="base-button base-button-green">Success</span>
+  <a class="base-button success-button">Success</a>
 </p>
 
 <p>
-  <span class="base-button base-button-red">Danger</span>
+  <a class="base-button danger-button">Danger</a>
 </p>
 
 <p>
-  <span class="base-button base-button-orange">Warning</span>
+  <a class="base-button warning-button">Warning</a>
 </p>
 
 <p>
-  <span class="base-button base-button-cyan">Info</span>
+  <a class="base-button info-button">Info</a>
 </p>
 
 
 <p>Less intrusive variants:</p>
 
 <p>
-  <span class="base-button-outline base-button-outline-blue">Primary (unobtrusive)</span>
+  <a class="unobtrusive-button fancy-button-unobtrusive">Primary (unobtrusive)</a>
 </p>
 
 <p>
-  <span class="base-button-outline base-button-outline-gray">Secondary (unobtrusive)</span>
+  <a class="unobtrusive-button secondary-button-unobtrusive">Secondary (unobtrusive)</a>
 </p>
 
 <p>
-  <span class="base-button-outline base-button-outline-green">Success (unobtrusive)</span>
+  <a class="unobtrusive-button success-button-unobtrusive">Success (unobtrusive)</a>
 </p>
 
 <p>
-  <span class="base-button-outline base-button-outline-red">Danger (unobtrusive)</span>
+  <a class="unobtrusive-button danger-button-unobtrusive">Danger (unobtrusive)</a>
 </p>
 
 <p>
-  <span class="base-button-outline base-button-outline-orange">Warning (unobtrusive)</span>
+  <a class="unobtrusive-button warning-button-unobtrusive">Warning (unobtrusive)</a>
 </p>
 
 <p>
-  <span class="base-button-outline base-button-outline-cyan">Info (unobtrusive)</span>
+  <a class="unobtrusive-button info-button-unobtrusive">Info (unobtrusive)</a>
 </p>
-
-    </div>
-  </body>
